<resources>
    <string name="btn_missed_call">"Missed Call"</string>
    <string name="missed_call_subtitle">"Note :Please do not answer the call"</string>
    <string name="enter_four_digit">"Enter last 4 digits of missed call number as OTP"</string>
    <string name="get_otp_on_sms">"Get OTP on SMS"</string>
    <string name="enter_onetime_password">Enter One Time Password</string>
    <string name="no_information_available">"No informations available"</string>
    <string name="txt_pin_new">"Enter OTP"</string>
    <string name="participate">"PARTICIPATE"</string>
    <string name="async_task_error_timeout">"Hey, we are unable to handle your request at this time. Please try again later."</string>
    <string name="txt_puchased_ticket_part2">I bought</string>
    <string name="api_verification_pin_message">"His identification number is XXX. Enter it to verify your account."</string>
    <string name="tv_points_in_reject_title">"POINTS REJECTED"</string>
    <string name="points_and_ticketno">"Points/Ticket No: "</string>
    <string name="points_new">" Points"</string>
    <string name="survey_id_new">" SURVEY ID :"</string>
    <string name="points_rejected_new">" POINTS REJECTED:"</string>
    <string name="tv_points_in_review">"SURVEYS PENDING FOR VERIFICATION"</string>
    <string name="txt_voucher_pin">"Voucher Pin"</string>
    <string name="txt_mandatory">"Mandatory"</string>
    <string name="isvalidbamarket">"Panel Station is not eligible for"</string>
    <string name="text_OR">"or"</string>
    <string name="signin_facebook">"Sign in with Facebook"</string>
    <string name="signin_signinpage_google">"Sign in with Google+"</string>
    <string name="text_edit">"edit"</string>
    <string name="thanks_smiley_msg">"Thank you for updating you profile; you will soon receive more rewarding surveys of your interest. "</string>
    <string name="txt_Reward">"Rewards"</string>
    <string name="txt_Redeem">"REDEEM"</string>
    <string name="txt_msg_pinsent">"OTP sent successfully!"</string>
    <string name="txt_RedeemHist">"REDEMPTION HISTORY"</string>
    <string name="txt_RewardHist">"   REWARDS  \n  HISTORY"</string>
    <string name="txt_PointsInReview">"   POINTS  \n  IN REVIEW"</string>
    <string name="tv_rewards_history">"REWARDS HISTORY"</string>
    <string name="txt_mobile_verification">"Mobile verification"</string>
    <string name="txt_mobile_number_verify">"You need to verify your mobile number in order to receive the redemption gift"</string>
    <string name="txt_mobilenumber">"Mobile number"</string>
    <string name="txt_donot_enter_code">"Note :Please do not enter country code"</string>
    <string name="txt_pin">"Pin"</string>
    <string name="txt_info_new">"Info"</string>
    <string name="btn_verify">"Verify"</string>
    <string name="btn_verify_new">"OTP"</string>
    <string name="txt_submit_new">"Verify"</string>
    <string name="general_rewards">"GENERAL REWARDS"</string>
    <string name="txt_option">"option"</string>
    <string name="txt_description">"Description"</string>
    <string name="txt_select">"Select"</string>
    <string name="txt_enter_points_redeem">"Enter the points you want to Redeem"</string>
    <string name="sweepstakes">"SWEEPSTAKES"</string>
    <string name="txt_each_ticket_part1">"Each ticket costs %d points"</string>
    <string name="txt_tickets">"Ticket"</string>
    <string name="txt_balance_points">"BALANCE POINTS"</string>
    <string name="txt_select_quantity">"SELECT QUANTITY"</string>
    <string name="txt_points_number">"Points: "</string>
    <string name="txt_BUY">"BUY"</string>
    <string name="txt_buy_btn_agreeing">"By clicking the buy button you are agreeing to all the term &amp; conditions of The Panel Station"</string>
    <string name="alert_dialog_txt_part3">"Sorry you need %d more points to redeem"</string>
    <string name="alert_dialog_txt_part1">"You need %d more points for general redemption.However you can always participate in our Monthly Prize Draw to win exciting prizes"</string>
    <string name="txt_thanks">"Thanks! "</string>
    <string name="txt_puchased_ticket_part1">"You have purchased %s Ticket(s)."</string>
    <string name="txt_receive_email_shortly">" You will receive an email shortly with all the information about the draw"</string>
    <string name="txt_contactus">"Contact us"</string>
    <string name="txt_raise_request">"Raise a request"</string>
    <string name="txt_msg_subject">"Subject"</string>
    <string name="btn_send">"Send"</string>
    <string name="btn_cancel">"Cancel"</string>
    <string name="api_msg_90days">"You can take survey once in 90 days only."</string>
    <string name="api_nosurveyavailable">"No Survey is Available for you at present. Please try again later!"</string>
    <string name="api_tps_account_linked">"TPS account is  linked with Social media"</string>
    <string name="api_profiler_unavailable">"Profiler is unavailable Currently"</string>
    <string name="api_email_registered">"Your EmailId is already registered"</string>
    <string name="api_device_registered">"Your Device is already registered for our service"</string>
    <string name="api_email_device_registered">"Your Email Id and Device are already registered for our service"</string>
    <string name="api_facebook_credentials">"Facebook credentials are already associated."</string>
    <string name="api_associated_tps_account">"Do you have any account in TPS to associate with Facebook?"</string>
    <string name="api_enter_valid_pin">"Please enter valid pin"</string>
    <string name="api_network_connection_unavailbale">"Network connection unavailable"</string>
    <string name="api_subject_here">"Enter subject here"</string>
    <string name="api_fill_all_answers">"Please fill all the answers on this page"</string>
    <string name="txt_save">"Save"</string>
    <string name="txt_tickets_buyMax">"You can buy maximum %d Ticket(s)"</string>
    <string name="app_name">The Panel Station</string>
    <string name="login_title">Panel Station</string>
    <string name="ptr_pull_to_refresh"></string>
    <string name="ptr_release_to_refresh"></string>
    <string name="ptr_refreshing"></string>
    <string name="ptr_last_updated"></string>
    <string name="lbl_privacy_policy_url">http://www.informatemi.com/tps/pp.php</string>
    <string name="lbl_terms_cond_url">http://www.informatemi.com/tps/tandc.php</string>
    <string name="select_language">Select Language</string>
    <string name="emailSignupMesage">Or Sign-Up using Email</string>
    <string name="hint_education">Education</string>
    <string name="hint_annualHighSAl">Annual HH.Income</string>
    <string name="hint_maritalStatus">Marital Status</string>
    <string name="hint_ethnicity">Ethnicity</string>
    <string name="hint_employment_status">Employment Status</string>
    <string name="hint_industry">Industry</string>
    <string name="FACEBOOK_APP_ID">2214631975437544</string>
    <string name="fb_login_protocol_scheme">fb2214631975437544</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">663529e74794f870c76caa3c96dffc56</string>
    <string name="panel_copyrights">"Copyright © 2015 thepanelstation. All rights reserved."</string>
    <string name="c">"Connection may not be sufficient at this time to receive request. Please try again later."</string>
    <string name="message_sel_country">"Please Select your country"</string>
    <string name="mat_addid">174926</string>
    <string name="mat_onversionkey">f9217ab0bd684aee398cfc950547d6e6</string>
    <string name="alert_dialog_txt_part2">"  more points for general redemption. However you can always participate in our Monthly Prize Draw to win exciting prizes."</string>
    <string name="alert_dialog_txt_part4">"  more points to redeem."</string>
    <string name="webpage_being_loaded">"Web Page Loading"</string>
    <string name="press_again_close">"Press Again to Close!"</string>
    <string name="txt_each_ticket_part2">" Points"</string>
    <string name="txt_tickets_in_cart_part1">"You have "</string>
    <string name="txt_tickets_in_cart_part2">" Ticket(s) in cart"</string>
    <string name="txt_tell_us_more">"Tell us more about the problem"</string>
    <string name="btn_next">"NEXT"</string>
    <string name="txt_forgot_password">"Forgot Password"</string>
    <string name="txt_social_link">"Link"</string>
    <string name="parser_appid">"5Tl7X8lvmLUXHJiHOh5m3zGq2L8UWCqhNy78AMse"</string>
    <string name="parser_clientkey">"kIKn4rBV0MhGYYn0uxCKaDBVBEJf0rsvLSNIR1Dj"</string>
    <string name="txt_wait_for_questions">"Please wait setting up questionnaire for you. "</string>
    <string name="txt_imnew">"I'm new"</string>
    <string name="msg_serverdown">"Server is down or under maintenance . Please try again later."</string>
    <string name="msg_citynotfound">"Unable to process request , due to difficulty in finding panalist cities of your country."</string>
    <string name="unabletoverifypin">"Unable to verify your pin, please input correct pin number"</string>
    <string name="info_link">" Please regenerate OTP after 24 hours.\n Please check your SMS settings or Blocked messages.\n SMS won't be delivered if you have activated DND services. \n Keep your mobile number recharged to receive SMS. \n If you still have issues please contact our helpdesk ID: tpsotp@thepanelstationsurveys3.com \n"</string>
    <string name="unsupport_fb_details">"Please enter Facebook account details with email-id"</string>
    <string name="lbl_appusagepermission">"Important Step:\nTurn on Panel Station App Usage permission.\nGo to Settings->Security->Apps with usage access."</string>
    <string name="subject">Subject</string>
    <string name="select_optional">Please select a file (optional)</string>
    <string name="txt_submit">"SUBMIT"</string>
    <string name="msg_message">"Please enter message"</string>
    <string name="msg_subject">"Please enter subject"</string>
    <string name="signupcomplete_thanks">Thank you.\nYou have been successfully Registered.</string>
    <string name="signupcomplete_logincred">Your login credentials have been sent to your registered email id.</string>
    <string name="signupcomplete_note">Note: Do refer spam and promotions folder for our email if you don’t find it in your inbox.</string>
    <string name="txt_yes">"Yes"</string>
    <string name="txt_no">"No"</string>
    <string name="ContactUs">"Contact us"</string>
    <string name="consent_form">CONSENT FORM</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="before_we_proceed">Before we proceed, please take out a few minutes to provide us with your information and consent which is required to be obtained in accordance with the new data privacy laws.</string>
    <string name="are_you_citizen_of_eu">Are you a citizen of the European Union?</string>
    <string name="are_you_in_eu_region">Are you currently in the European Union?</string>
    <string name="in_accordance_big_1">In accordance with the new data privacy laws in the European Union (GDPR), we request you to read the below form carefully and provide your consent to continue being a part of the TPS Community.</string>
    <string name="here_at_the_big_2">Here at The Panel Station, we take your privacy seriously and will only use your personal information to administer your account and to provide the products and services you have requested from us.</string>
    <string name="you_understand_big_text_3">You understand and agree that by choosing the “Yes” option, we may send you appropriate notifications through e-mails and SMS’s which shall form a part of services that are being offered to you.</string>
    <string name="do_you_wish">Do you wish to consent yourself to be part of The Panel Station community to participate in its research offerings?</string>
    <string name="yes_i_agree">Yes, I agree</string>
    <string name="no_i_dont_agree">No, I don\'t agree</string>
</resources>