<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/transparent"
    android:layout_height="match_parent">

<ScrollView
    android:id="@+id/contact_us_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:scrollbars="none">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/dp8">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/sp_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:ms_hint="@string/subject" />

            <EditText
                android:id="@+id/edt_messagesubject"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rewardsBtnHeights"
                android:hint="@string/msg_subject"
                android:inputType="text"
                android:paddingLeft="@dimen/dp4"
                android:paddingStart="@dimen/dp4"
                android:textColor="@color/black"
                android:textSize="@dimen/sp18"
                android:visibility="gone"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:padding="@dimen/dp2"
                android:text="@string/msg_message"
                android:textColor="@color/coupon_gray"
                android:textSize="@dimen/sp18" />

            <EditText
                android:id="@+id/edt_tellusmore"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_contact_us_height"
                android:layout_marginTop="@dimen/dp6"
                android:background="@drawable/edtbox_rounded_corner"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/dp4"
                android:paddingStart="@dimen/dp4"
                android:textColor="@color/black"
                android:textSize="@dimen/sp14"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/attach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/dp8"
                    android:src="@drawable/attach_image" />

                <TextView
                    android:id="@+id/attached_file_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_optional"
                    android:padding="@dimen/dp8"
                    android:singleLine="true"
                    android:textSize="@dimen/sp16" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:contentDescription="@string/ContactUs"
                android:src="@drawable/message" />

        </LinearLayout>

    </android.support.v7.widget.CardView>





</ScrollView>
    </LinearLayout>

