<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:background="@color/aqua_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.panelManagement.widgets.TextViewPlus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_thanks"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <com.panelManagement.widgets.TextViewPlus
            android:id="@+id/tv_purchased_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:lines="2"
            android:text="@string/txt_puchased_ticket_part1"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/tv_mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_gift_box" />

        <com.panelManagement.widgets.TextViewPlusBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_receive_email_shortly"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>