<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/ic_checkmail" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_checkmail"
            android:visibility="invisible" />

        <com.panelManagement.widgets.TextViewPlus
            android:id="@+id/lbl_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/signupcomplete_thanks"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4C4C4C"
            android:typeface="sans" />

        <com.panelManagement.widgets.TextViewPlus
            android:id="@+id/lbl_creditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_thanks"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/signupcomplete_logincred"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4C4C4C"
            android:typeface="sans" />

        <com.panelManagement.widgets.TextViewPlus
            android:id="@+id/lbl_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_creditional"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/signupcomplete_note"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4C4C4C"
            android:typeface="sans" />
    </RelativeLayout>

</LinearLayout>